tests/pact/bad/bad-modules-disabled.repl
(env-exec-config false true)
(module M G
  (defcap G () true)
  (defun foo () true))
